.provarCaches/00D5f000005vwGkEAI/objects/rstk__soentwarr__c.object
<CustomObject>
    <description>soentwarr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>LEFT(rstk__soentwarr_socontent__r.rstk__externalid__c &amp; &apos;-&apos; &amp; rstk__soentwarr_soline__r.rstk__externalid__c &amp; &apos;-&apos; &amp; rstk__soentwarr_sowarr__r.rstk__sowarr_srlno__c, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(LEFT(rstk__soentwarr_socontent__r.Name, 30)  &amp; &apos;-&apos; &amp;  RIGHT(rstk__soentwarr_soline__r.Name, 20) &amp; &apos;-&apos; &amp; rstk__soentwarr_sowarr__r.Name, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentwarr_socontent__c</fullName>
        <description>Contract Entitlement</description>
        <inlineHelpText>The Contract Entitlement to which this record is attached.</inlineHelpText>
        <label>Contract Entitlement</label>
        <referenceTo>rstk__socontent__c</referenceTo>
        <relationshipLabel>Contract Entitlement Covered Items</relationshipLabel>
        <relationshipName>soentwarrs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soentwarr_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Covered SO Line</description>
        <inlineHelpText>The SO Line of the warranted item that &quot;entitled&quot; the Customer to this Entitled-To Product.</inlineHelpText>
        <label>Covered SO Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Contract Entitlement Covered Items</relationshipLabel>
        <relationshipName>Contract_Entitlement_Covered_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentwarr_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Covered Item</description>
        <inlineHelpText>The warranted item covered under this Contract Entitlement.</inlineHelpText>
        <label>Covered Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Contract Entitlement Covered Items</relationshipLabel>
        <relationshipName>soentwarrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Entitlement Covered Item</label>
    <listViews>
        <fullName>rstk__RS_Contract_Entitlement_Covered_Items</fullName>
        <columns>NAME</columns>
        <columns>rstk__soentwarr_socontent__c</columns>
        <columns>rstk__soentwarr_sowarr__c</columns>
        <columns>rstk__soentwarr_soline__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__formula_extid__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Entitlement Covered Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Entitlement_Covered_Items_31</fullName>
        <columns>NAME</columns>
        <columns>rstk__soentwarr_socontent__c</columns>
        <columns>rstk__soentwarr_sowarr__c</columns>
        <columns>rstk__soentwarr_soline__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Entitlement Covered Items-3185</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Entitlement Covered Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Covered_Sales_Order_Line_Required</fullName>
        <active>true</active>
        <description>Covered Sales Order is Line Required</description>
        <errorConditionFormula>ISBLANK(rstk__soentwarr_soline__c)</errorConditionFormula>
        <errorDisplayField>rstk__soentwarr_soline__c</errorDisplayField>
        <errorMessage>Covered Sales Order is Line Required</errorMessage>
    </validationRules>
</CustomObject>